v0.2.0:
  Secure RH init scripts
  Add option for beaver log shipping
v0.1.11:
  Add default bash PS1 prompt
v0.1.10:
  Add bash-completion package
v0.1.9:
  Initial public release