@@ -1,7 +1,8 @@
 fixtures:
   repositories:
-    beaver: git://github.com/evenup/evenup-beaver.git
-    concat: git://github.com/ripienaar/puppet-concat.git
+    account: https://github.com/torrancew/puppet-account.git
+    beaver: https://github.com/evenup/evenup-beaver.git
+    concat: https://github.com/ripienaar/puppet-concat.git
   symlinks:
     common: "#{source_dir}"
 
